samples/_failures_safe/1761417842_373a1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57d629e7.c: In function ‘main’:
./samples/SAFE/__tmp_57d629e7.c:167:5: error: expected declaration or statement at end of input
  167 |     tokenize(input, tokens);
      |     ^~~~~~~~
